changed the themes to have categories autocomplete support

--- a/src/Ditto/jQuery/ui/themes/bootstrap/jquery-ui-1.10.0.css
+++ b/src/Ditto/jQuery/ui/themes/bootstrap/jquery-ui-1.10.0.css
@@ -7,6 +7,13 @@
  *
  * Portions copyright jQuery UI & Twitter Bootstrap
  */
+/*MATTHEW ADDITIONS:*/
+ .ui-autocomplete-category {
+    font-weight: bold;
+    padding: .2em .4em;
+    margin: .8em 0 .2em;
+    line-height: 1.5;
+  }
 
 
 /* Layout helpers
