fixed smoothness file name and improved autocomplete category styling

--- a/src/Ditto/jQuery/ui/themes/bootstrap/jquery-ui-1.10.0.css
+++ b/src/Ditto/jQuery/ui/themes/bootstrap/jquery-ui-1.10.0.css
@@ -10,9 +10,8 @@
 /*MATTHEW ADDITIONS:*/
  .ui-autocomplete-category {
     font-weight: bold;
-    padding: .2em .4em;
-    margin: .8em 0 .2em;
-    line-height: 1.5;
+    padding: 0em .4em;
+    line-height: 1.9em;
   }
 
 
